--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,24 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --toprakbeji: #d6c4a8;
+  --adacayiyesili: #a4b49f;
+  --bulutgrisi: #c9d0d4;
+  --koyuagackahverengisi: #6a5847;
+  --gunisigisarisi: #f7e7a0;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+
+  --color-bej: var(--toprakbeji);
+  --color-yesil: var(--adacayiyesili);
+  --color-gri: var(--bulutgrisi);
+  --color-kahverengi: var(--koyuagackahverengisi);
+  --color-sari: var(--gunisigisarisi);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
